resources/checkov-job.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: checkov
