resources/kagent-openai-models.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nuc10-node08
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nuc10-node08-01
  labels:
    kubernetes.io/service-name: nuc10-node08
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.1.101"
