resources/litellm.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-svr01
  namespace: litellm-system
spec:
  ports:
    - name: http
      protocol: TCP
      port: 11434
      targetPort: 11434
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ollama-svr01-1
  namespace: litellm-system
  labels:
    kubernetes.io/service-name: ollama-svr01
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 11434
endpoints:
  - addresses:
      - "192.168.1.18"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  namespace: litellm-system
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
        - name: litellm
          image: ghcr.io/berriai/litellm:main-v1.104.2
          args:
            - "--config"
            - "/etc/litellm/config.yaml"
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/litellm
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: 4000
            initialDelaySeconds: 120
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 4000
            initialDelaySeconds: 120
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
  namespace: litellm-system
spec:
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
# NOTE: Enable "Local Network" access for Firefox and Chrome. In Mac System Settings > Privacy & Security > Local Network > Firefox (set to true)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ingress
  namespace: litellm-system
  annotations:
    haproxy.org/path-rewrite: /
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/app-root: /litellm
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: litellm-service
                port:
                  number: 4000
            path: /
            pathType: Prefix
