resources/k8sgpt-localai.yml
---
# SPDX-license-identifier: Apache-2.0
##############################################################################
# Copyright (c) 2024
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Apache License, Version 2.0
# which accompanies this distribution, and is available at
# http://www.apache.org/licenses/LICENSE-2.0
##############################################################################
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-localai
  namespace: k8sgpt-operator-system
spec:
  ai:
    model: gpt-4
    backend: localai
    baseUrl: http://local-ai.local-ai-system.svc.cluster.local:8080/v1
    enabled: true
  version: v0.4.40
  noCache: false
